src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__sqlite_diagnostics_overlay_wrapped_scroll.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ test_db ▸ -       connected | local
┌ [1] Explor┐[Info] [Cols] [Idx] [FK] [Trig] [DDL]
│> users    │┌ [2] Inspector ────────────────────┐
│  posts    ││(select a table)                   │
│  comments ││                                   │
│       ╭ SQLite Diagnostics ─────────────╮      │
│       │                                 │      │
│       │SQLite features: FTS5: available │      │
│       │  FTS4: not available            │      │
│       │  RTree: available               │      │
│       │  JSON: available                │      │
│       │                                 │──────┘
│       │Effective foreign keys: on       │──────┐
│       │                                 │      │
│       │Journal mode: wal                │      │
│       │                                 │      │
│       │Effective query only: off        │      │
│       │                                 │      │
│       ╰ Esc: Close │ ↑↓: Scroll │ r: Run╯      │
│           ││                                   │
│           ││                                   │
└───────────┘└───────────────────────────────────┘
?:Help
